<?xml version="1.0"?>
<package format="2">
  <name>ublox</name>
  <version>2.3.0</version>
  <description>Provides a ublox_gps node for u-blox GPS receivers, messages, and serialization packages for the binary UBX protocol.</description>
  <author>Johannes Meyer</author>
  <maintainer email="vmlane@alum.mit.edu">Veronica Lane</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/ublox</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ublox_serialization</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>ublox_gps</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
