<package format='2'>
  <name>ublox_gps</name>
  <version>0.0.5</version>
  <description>
     Driver for the ublox GPS device.
  </description>
  <author>Johannes Meyer</author>
  <maintainer email="gcross.code@icloud.com">Gareth Cross</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ublox_gps</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ublox_serialization</depend>
  <depend>ublox_msgs</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>diagnostic_updater</depend>

</package>
