<package>
  <name>ublox_msgs</name>
  <version>0.0.0</version>
  <description>

     ublox_msgs contains raw messages used by GNSS receiver modules of the company u-blox AG.

  </description>
  <author>Johannes Meyer</author>
  <maintainer email="nothing@nobody.com">Johannes Meyer</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ublox_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>message_generation</buildtool_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>ublox_serialization</build_depend>
  <run_depend>ublox_serialization</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rosdoc external="http://www.u-blox.com/en/download/documents-a-resources.html"/>
  </export>

</package>
