<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_msgs</name>
  <version>2.3.0</version>
  <description>

     ublox_msgs contains raw messages for u-blox GNSS devices.

  </description>
  <author>Johannes Meyer</author>
  <maintainer email="vmlane@alum.mit.edu">Veronica Lane</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ublox</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ublox_serialization</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
