<package>
  <name>ublox_serialization</name>
  <version>1.0.0</version>
  <description>

     ublox_serialization provides header files for serialization of ROS messages to and from u-blox message format.

  </description>
  <author>Johannes Meyer</author>
  <maintainer email="nothing@nobody.com">Johannes Meyer</maintainer>
  <maintainer email="vmlane@alumn.mit.edu">Veronica Lane</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ublox_serialization</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roscpp_serialization</build_depend>
  <run_depend>roscpp_serialization</run_depend>

  <export>
    <rosdoc external="http://www.u-blox.com/en/download/documents-a-resources.html"/>
  </export>

</package>
